--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "name": "question-and-answers",
   "version": "1.0.0",
   "description": "",
-  "main": "seed.js",
+  "main": "server/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "react-dev": "webpack -d --watch"
+    "build": "webpack --watch",
+    "start": "nodemon server/index.js",
+    "seed": "node seed.js"
   },
   "repository": {
     "type": "git",
@@ -23,15 +25,17 @@
     "mongo": "^0.1.0",
     "mongoose": "^5.10.14",
     "morgan": "^1.10.0",
+    "nodemon": "^2.0.6",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "webpack": "^5.4.0"
+    "react-time-ago": "^6.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.3",
     "@babel/preset-env": "^7.12.1",
     "@babel/preset-react": "^7.12.5",
     "babel-loader": "^8.2.1",
+    "webpack": "^5.4.0",
     "webpack-cli": "^4.2.0"
   }
 }
