--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
   "homepage": "https://github.com/TeamM-V-P/Question-and-Answers#readme",
   "dependencies": {
     "axios": "^0.21.0",
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "javascript-time-ago": "^2.3.3",
     "mongo": "^0.1.0",
     "mongoose": "^5.10.14",
     "morgan": "^1.10.0",
@@ -35,6 +37,12 @@
     "@babel/preset-env": "^7.12.1",
     "@babel/preset-react": "^7.12.5",
     "babel-loader": "^8.2.1",
+    "eslint": "^7.13.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-react": "^7.21.5",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "webpack": "^5.4.0",
     "webpack-cli": "^4.2.0"
   }
