--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "morgan": "^1.10.0",
     "nodemon": "^2.0.6",
     "react": "^17.0.1",
+    "react-click-outside": "^3.0.1",
     "react-dom": "^17.0.1",
     "react-time-ago": "^6.2.1"
   },
