--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "server/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --watch",
     "build": "webpack --watch",
     "start": "nodemon server/index.js",
     "seed": "node seed.js"
@@ -37,6 +37,7 @@
     "@babel/core": "^7.12.3",
     "@babel/preset-env": "^7.12.1",
     "@babel/preset-react": "^7.12.5",
+    "@shelf/jest-mongodb": "^1.2.3",
     "babel-loader": "^8.2.1",
     "eslint": "^7.13.0",
     "eslint-config-airbnb": "^18.2.1",
@@ -44,6 +45,8 @@
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "jest": "^26.6.3",
+    "supertest": "^6.0.1",
     "webpack": "^5.4.0",
     "webpack-cli": "^4.2.0"
   }
