--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@
 ##
 ## Get latest from https://github.com/github/gitignore/blob/master/VisualStudio.gitignore
 node_modules.*
-
+*.pem
 # User-specific files
 *.rsuser
 *.suo
